--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^6.3.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.4",
-    "session": "^0.1.0"
+    "request": "^2.88.2",
+    "session": "^0.1.0",
+    "upload": "^1.1.1"
   }
 }
